# ai-software-factory

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.sh
backend/: main.py  models.py  ws.py
backend/routes/: runs.py
backend/store/: run_store.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/pages/: Build.tsx  History.tsx  Landing.tsx  Result.tsx
src/: main.py
src/agents/: reviewer.py
src/core/: config.py  memory.py  mock_llm.py  models.py  pipeline.py  sandbox.py
tests/: test_pipeline.py
