[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-software-factory"
version = "2.0.0"
description = "AI Software Factory - Multi-Agent Code Generation with Full-Stack Web Interface"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core pipeline
    "litellm>=1.50.0",
    "crewai>=0.86.0",
    "crewai-tools>=0.17.0",
    "openai>=1.50.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "json-repair>=0.25.0",   # robustly fixes malformed LLM JSON output
    # Web backend
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
]
memory = [
    "chromadb>=0.5.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
ai-factory     = "src.main:main"
ai-factory-web = "backend.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "backend*"]
